fixed scrollbar issue on profile page

--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -23,9 +23,15 @@
 	&-info {
 
 		width: 100%;
+		height: 90%;
 		margin: 0 auto;
 		padding-top: 2em;
 		padding-bottom: 1em;
+		overflow-y: auto;
+
+		&::-webkit-scrollbar {
+			width: 1px;
+		}
 
 		&-image {
 			width: 10em;
